# NexusGate

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_90_SECONDS.md  ROADMAP.md  pyproject.toml
Cortex/: .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  README.md  RELEASE_MANIFEST.json  TEST_REPORT.md  cortex-all-one.sh  pyproject.toml
GITNEXUS/: README.md
NexusCell/: NEXUS_CELL_ARCHITECTURE.md  NEXUS_CELL_PORT_MAP.md  README.md
NexusShell/: README.md
PetriDishPro/: .gitignore  LICENSE  NEXUS_BRIDGE.md  ORGANISM_GATE.ps1  README.md  ROADMAP.md  RUN_TESTS_DIGEST.ps1  petri_bridge_manifest.v0.1.0.json
T3MP3ST/: README.md
Tesseract Neural Network/: README.md  manifest.json  portal_entry.json  receipt_paths.json  refresh_from_neuralforge.py  tnn_surface.py
chatgpt/: scripts.md
docs/: ENTRYPOINTS.md  NEXUS_GATE_FOLDER_MAP.md  README.md
domains/: README.md
electron/: README.md  main.js  package-lock.json  package.json  preload.js
examples/: packet.demo.shadow.json
ledger/: README.md  action_lifecycle.jsonl  action_receipts.jsonl  epoch_chain.jsonl  epoch_observations.jsonl  evidence_distillation.jsonl  nexus_gate_cold_evidence_ledger.v0.1.5.jsonl  nexus_gate_failure_ledger.v0.1.4.jsonl  nexus_gate_ledger.v0.1.0.jsonl  nexus_gate_update_ledger.v0.1.4.jsonl  recommendation_outcomes.jsonl
logs/: README.md
loops/: README.md  nexus_loop_registry.v0.1.json
neural_activity/: README.md  index.html
nexus_gate/: README.md  __init__.py  cli.py
policy/: authority_laws.json  capabilities.json  claim_boundaries.json  (+1 more)
(+1392 files in other folders)
