[project]
name = "nexus-gate"
version = "0.9.2"
description = "Reflective Intelligence Layer for AI Systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "James Paul Jackson" }]

[project.scripts]
nexus = "nexus_gate.cli:main"

[tool.setuptools.packages.find]
include = ["nexus_gate*"]
# current-line: v0.9.1 origin-aligned GITNEXUS impact bridge
